fix hyperliquid and add fix dropdown button to closed

--- a/templates/indexv2.html
+++ b/templates/indexv2.html
@@ -968,17 +968,23 @@
             <div class="col-md-3">
               <label class="form-label">Exchange</label>
               <select id="force-exchange" class="form-select dark-input">
+                <option value="aden">Aden</option>
+                <option value="aster">Aster</option>
+                <option value="backpack">Backpack</option>
                 <option value="binance">Binance</option>
-                <option value="bybit">Bybit</option>
-                <option value="gate">Gate</option>
-                <option value="okx">OKX</option>
-                <option value="kucoin">KuCoin</option>
+                <option value="bingx">BingX</option>
                 <option value="bitget">Bitget</option>
+                <option value="bybit">Bybit</option>
+                <option value="extended">Extended</option>
+                <option value="gate">Gate</option>
+                <option value="hyperliquid">Hyperliquid</option>
+                <option value="kucoin">KuCoin</option>
+                <option value="lbank">Lbank</option>
                 <option value="mexc">MEXC</option>
+                <option value="okx">OKX</option>
+                <option value="paradex">Paradex</option>
                 <option value="whitebit">WhiteBIT</option>
                 <option value="xt">XT</option>
-                <option value="htx">HTX</option>
-                <option value="extended">Extended</option>
               </select>
             </div>
 
